@@ -1,10 +1,13 @@
 # This is only here because I can't get codecs.EncodedFile to work. E for
 # effort!
 
+import locale
+
 class EncodedFile:
     def __init__(self, f):
         self.f = f
     def __getattr__(self, a):
         return getattr(self.f, a)
     def write(self, s):
-        self.f.write(s.encode(self.f.encoding or 'ascii', 'replace'))
+        encoding = self.f.encoding or locale.getpreferredencoding()
+        self.f.write(s.encode(encoding, 'replace'))
