@@ -174,6 +174,8 @@ if __name__ == '__main__':
             if args:
                 tracks = [tracks[int(a)-1] for a in args]
             for t in tracks:
-                print lastfm.marshaller.dump(t)
+                # The serialized format is UTF-8, but when printing, we need
+                # to encode to stdout instead... this is ugly.
+                print lastfm.marshaller.dump(t).decode('utf-8')
     else:
         sys.exit(1)
